--- a/admin lab RTL template/login.html
+++ b/admin lab RTL template/login.html
@@ -1,18 +1,16 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <!--
-Template Name: Admin Lab Dashboard build with Bootstrap v2.3.1
-Template Version: 1.0
-Author: Mosaddek Hossain
-Website: http://thevectorlab.net/
+Template Name: login
 -->
 
 <!--[if IE 8]> <html lang="en" class="ie8"> <![endif]-->
 <!--[if IE 9]> <html lang="en" class="ie9"> <![endif]-->
 <!--[if !IE]><!--> <html lang="en"> <!--<![endif]-->
 <!-- BEGIN HEAD -->
+
 <head>
   <meta charset="utf-8" />
-  <title>Login page</title>
+  <title>ورود</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport" />
   <meta content="" name="description" />
   <meta content="" name="author" />
@@ -24,6 +22,7 @@ Website: http://thevectorlab.net/
 </head>
 <!-- END HEAD -->
 <!-- BEGIN BODY -->
+<body class="fixed-top">
 <body id="login-body">
   <div class="login-header">
       <!-- BEGIN LOGO -->
@@ -41,25 +40,26 @@ Website: http://thevectorlab.net/
           <i class="icon-lock"></i>
       </div>
       <div class="control-wrap">
-          <h4>User Login</h4>
+
+          <h4>خوش آمدید</h4>
           <div class="control-group">
               <div class="controls">
                   <div class="input-prepend">
-                      <span class="add-on"><i class="icon-user"></i></span><input id="input-username" type="text" placeholder="Username" />
+                      <span class="add-on"><i class="icon-user"></i></span><input id="input-username" type="text" placeholder="نام کاربری" />
                   </div>
               </div>
           </div>
           <div class="control-group">
               <div class="controls">
                   <div class="input-prepend">
-                      <span class="add-on"><i class="icon-key"></i></span><input id="input-password" type="password" placeholder="Password" />
+                      <span class="add-on"><i class="icon-key"></i></span><input id="input-password" type="password" placeholder="رمز ورود" />
                   </div>
                   <div class="mtop10">
                       <div class="block-hint pull-left small">
-                          <input type="checkbox" id=""> Remember Me
+                          <input type="checkbox" id=""> مرا به یاد بسپار
                       </div>
                       <div class="block-hint pull-right">
-                          <a href="javascript:;" class="" id="forget-password">Forgot Password?</a>
+                          <a href="javascript:;" class="" id="forget-password">رمز ورود را فراموش کرده ام</a>
                       </div>
                   </div>
 
@@ -69,7 +69,7 @@ Website: http://thevectorlab.net/
           </div>
       </div>
 
-      <input type="submit" id="login-btn" class="btn btn-block login-btn" value="Login" />
+      <input type="submit" id="login-btn" class="btn btn-block login-btn" value="ورود" />
     </form>
     <!-- END LOGIN FORM -->        
     <!-- BEGIN FORGOT PASSWORD FORM -->
@@ -90,7 +90,7 @@ Website: http://thevectorlab.net/
   <!-- END LOGIN -->
   <!-- BEGIN COPYRIGHT -->
   <div id="login-copyright">
-      2013 &copy; Admin Lab Dashboard.
+      2013 &copy;mehranik
   </div>
   <!-- END COPYRIGHT -->
   <!-- BEGIN JAVASCRIPTS -->
