--- a/admin lab RTL template/login.html
+++ b/admin lab RTL template/login.html
@@ -45,7 +45,7 @@ Template Name: login
           <div class="control-group">
               <div class="controls">
                   <div class="input-prepend">
-                      <span class="add-on"><i class="icon-user"></i></span><input id="input-username" type="text" placeholder="نام کاربری" />
+                      <span class="add-on"><i class="icon-user"></i></span><input id="input-username" type="text" placeholder="Email" />
                   </div>
               </div>
           </div>
@@ -55,11 +55,11 @@ Template Name: login
                       <span class="add-on"><i class="icon-key"></i></span><input id="input-password" type="password" placeholder="رمز ورود" />
                   </div>
                   <div class="mtop10">
-                      <div class="block-hint pull-left small">
+                      <div class="block-hint pull-right small">
                           <input type="checkbox" id=""> مرا به یاد بسپار
                       </div>
                       <div class="block-hint pull-right">
-                          <a href="javascript:;" class="" id="forget-password">رمز ورود را فراموش کرده ام</a>
+                          
                       </div>
                   </div>
 
