حساب کاربری مربوط به مشتری

--- a/admin lab RTL template/login.html
+++ b/admin lab RTL template/login.html
@@ -27,7 +27,7 @@ Template Name: login
   <div class="login-header">
       <!-- BEGIN LOGO -->
       <div id="logo" class="center">
-          <img src="img/logo.png" alt="logo" class="center" />
+          <img src="img/logo1.png" alt="logo" class="center" />
       </div>
       <!-- END LOGO -->
   </div>
