--- a/admin lab RTL template/ui_elements_general.html
+++ b/admin lab RTL template/ui_elements_general.html
@@ -715,7 +715,8 @@
                                             <h3 id="myModalLabel2">Alert Header</h3>
                                         </div>
                                         <div class="modal-body">
-                                            <p>Body goes here...</p>
+                                            <input type="text" value="biogas" />
+                                            <p>Body goes here...2</p>
                                         </div>
                                         <div class="modal-footer">
                                             <button data-dismiss="modal" class="btn btn-primary">OK</button>
@@ -1057,8 +1058,7 @@
 	<script type="text/javascript" src="assets/uniform/jquery.uniform.min.js"></script>
 	<script type="text/javascript" src="assets/gritter/js/jquery.gritter.js"></script>
 	<script type="text/javascript" src="js/jquery.pulsate.min.js"></script>
-	<script src="assets/fancybox/source/jquery.fancybox.pack.js"></script>
-
+	
     <!-- jquery slider -->
     <script type="text/javascript" src="assets/jslider/js/jshashtable-2.1_src.js"></script>
     <script type="text/javascript" src="assets/jslider/js/jquery.numberformatter-1.2.3.js"></script>
