--- a/admin lab RTL template/Inventory.html
+++ b/admin lab RTL template/Inventory.html
@@ -307,6 +307,7 @@
                                 </tr>
                                 </tbody>
                         </table>
+                         <a href="#">  <i class="icon-print"></i></a>
                         </div>
                     </div>
                     <!-- END EXAMPLE TABLE widget-->
@@ -324,7 +325,7 @@
    <!-- END CONTAINER -->
    <!-- BEGIN FOOTER -->
    <div id="footer">
-       2013 &copy; Admin Lab Dashboard.
+       2013 &copy;MEHRANIK
       <div class="span pull-left">
          <span class="go-top"><i class="icon-arrow-up"></i></span>
       </div>
