--- a/admin lab RTL template/RecordDamage.html
+++ b/admin lab RTL template/RecordDamage.html
@@ -209,7 +209,7 @@
 کالا </label>
   <div class="controls"> <textarea class="span6" rows="8"></textarea> </div>
   </div>
-  <div class="form-actions"> <button type="submit" class="btn btn-success">ثبت</button> <button type="button" class="btn">الغا</button>
+  <div class="form-actions"> <button type="submit" class="btn btn-success">ثبت</button> <button type="reset" class="btn">الغا</button>
   </div>
 </form>
 </div>
