--- a/admin lab RTL template/attachLabel.html
+++ b/admin lab RTL template/attachLabel.html
@@ -172,10 +172,8 @@
                        <li>
                            <a href="#"><i class="icon-home"></i></a><span class="divider">&nbsp;</span>
                        </li>
-                       <li>
-                           <a href="#">Form Stuff </a> <span class="divider">&nbsp;</span>
-                       </li>
-                       <li><a href="#">Dropzone Page</a><span class="divider-last">&nbsp;</span></li>
+                       
+                       <li><a href="attachLabel.html">ثبت برچسب کالا</a><span class="divider-last">&nbsp;</span></li>
                    </ul>
                    <!-- END PAGE TITLE & BREADCRUMB-->
                </div>
@@ -241,7 +239,7 @@
    <!-- END CONTAINER -->
    <!-- BEGIN FOOTER -->
    <div id="footer">
-       2013 &copy; Admin Lab Dashboard.
+       2013 &copy;MEHRANIK
       <div class="span pull-left">
          <span class="go-top"><i class="icon-arrow-up"></i></span>
       </div>
