--- a/admin lab RTL template/gallery.html
+++ b/admin lab RTL template/gallery.html
@@ -746,7 +746,7 @@
 	<!-- END CONTAINER -->
 	<!-- BEGIN FOOTER -->
 	<div id="footer">
-        2013 &copy; Admin Lab Dashboard.
+        2013 &copy;MEHRANIK
 		<div class="span pull-left">
 			<span class="go-top"><i class="icon-arrow-up"></i></span>
 		</div>
