--- a/admin lab RTL template/lock.html
+++ b/admin lab RTL template/lock.html
@@ -67,7 +67,7 @@ Website: http://thevectorlab.net/
   <!-- END LOCK -->
   <!-- BEGIN COPYRIGHT -->
   <div id="login-copyright">
-      2013 &copy; Admin Lab Dashboard.
+      2013 &copy;MEHRANIK
   </div>
   <!-- END COPYRIGHT -->
   <!-- BEGIN JAVASCRIPTS -->
