--- a/admin lab RTL template/submitComplaint.html
+++ b/admin lab RTL template/submitComplaint.html
@@ -213,7 +213,7 @@
                            </div>
                                 <div class="form-actions">
                               <button type="submit" class="btn btn-success">ثبت</button>
-                              <button type="button" class="btn">الغا</button>
+                              <button type="reset" class="btn">الغا</button>
                            </div>
                                 </form>
                         </div>
@@ -233,7 +233,7 @@
    <!-- END CONTAINER -->
    <!-- BEGIN FOOTER -->
    <div id="footer">
-       2013 &copy; Admin Lab Dashboard.
+       2013 &copy;MEHRANIK
       <div class="span pull-left">
          <span class="go-top"><i class="icon-arrow-up"></i></span>
       </div>
