--- a/admin lab RTL template/unlabeledGoods.html
+++ b/admin lab RTL template/unlabeledGoods.html
@@ -167,10 +167,8 @@
                        <li>
                            <a href="#"><i class="icon-home"></i></a><span class="divider">&nbsp;</span>
                        </li>
-                       <li>
-                           <a href="#">Components</a> <span class="divider">&nbsp;</span>
-                       </li>
-                       <li><a href="#">Data Tables</a><span class="divider-last">&nbsp;</span></li>
+                       
+                       <li><a href="unlabeledGoods.html">کالاهای بی‌برچسب</a><span class="divider-last">&nbsp;</span></li>
                    </ul>
                   <!-- END PAGE TITLE & BREADCRUMB-->
                </div>
@@ -478,7 +476,7 @@
    <!-- END CONTAINER -->
    <!-- BEGIN FOOTER -->
    <div id="footer">
-       2013 &copy; Admin Lab Dashboard.
+       2013 &copy;MEHRANIK
       <div class="span pull-left">
          <span class="go-top"><i class="icon-arrow-up"></i></span>
       </div>
