--- a/admin lab RTL template/newGood.html
+++ b/admin lab RTL template/newGood.html
@@ -168,10 +168,8 @@
                        <li>
                            <a href="#"><i class="icon-home"></i></a><span class="divider">&nbsp;</span>
                        </li>
-                       <li>
-                           <a href="#">Components</a> <span class="divider">&nbsp;</span>
-                       </li>
-                       <li><a href="#">Data Tables</a><span class="divider-last">&nbsp;</span></li>
+                       
+                       <li><a href="newGood.html">ثبت کالای جدید</a><span class="divider-last">&nbsp;</span></li>
                    </ul>
                   <!-- END PAGE TITLE & BREADCRUMB-->
                </div>
@@ -236,7 +234,7 @@
                            </div>
                                 <div class="form-actions">
                               <button type="submit" class="btn btn-success">ثبت</button>
-                              <button type="button" class="btn">الغا</button>
+                              <button type="reset" class="btn">الغا</button>
                            </div>
                                 </form>
                         </div>
@@ -256,7 +254,7 @@
    <!-- END CONTAINER -->
    <!-- BEGIN FOOTER -->
    <div id="footer">
-       2013 &copy; Admin Lab Dashboard.
+       2013 &copy;MEHRANIK
       <div class="span pull-left">
          <span class="go-top"><i class="icon-arrow-up"></i></span>
       </div>
