--- a/admin lab RTL template/index.html
+++ b/admin lab RTL template/index.html
@@ -10,7 +10,7 @@
 <!-- BEGIN HEAD -->
 <head>
    <meta charset="utf-8" />
-   <title>ویرایش کاربر</title>
+   <title>صفحه‌ی نخست</title>
    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
    <meta content="" name="description" />
    <meta content="" name="author" />
